# Spot_Switch_Map_System

./: .gitignore  .gitmodules  README.md  extract_apriltag_data.py  tags_pose.yaml
config/: entry_points.yaml  map_path.yaml  tags_position.yaml
map_manager/: CMakeLists.txt  package.xml
map_manager/entry_points_data/: entry_points.yaml
map_manager/include/map_manager/: map_manager.hpp
map_manager/include/pose_utils/: pose_utils.hpp
map_manager/launch/: map_manager.launch.py
map_manager/spot_graph_nav/spot_graph_nav/: graph_nav_estop.py  graph_nav_single_map.py  graph_nav_util.py
map_manager/src/: map_manager copy.cpp  map_manager.cpp  map_manager_node.cpp  pose_utils.cpp
maps/: extract_apriltag_data.py  tags_position.yaml  view_map.py
spot_graph_nav/: package.xml  setup.cfg  setup.py
spot_graph_nav/launch/: spot_graph_nav.launch.py
spot_graph_nav/spot_graph_nav/: apriltag_localize.py  estop_gui.py  graph_nav_single_map.py  graph_nav_util.py  spot_graph_nav_node.py  spot_manual_control.py
switch_map_interfaces/: CMakeLists.txt  package.xml
switch_map_interfaces/srv/: GoalPath.srv
switch_map_system_bringup/: CMakeLists.txt  package.xml
switch_map_system_bringup/config/: entry_points.yaml  inspection_points.yaml  map_path.yaml  tags_position.yaml
switch_map_system_bringup/launch/: spot_graph_nav.launch.py  switch_map_bringup.launch.py
switch_pcd_map/: CMakeLists.txt  package.xml
switch_pcd_map/include/switch_pcd_map/: switch_pcd_map.hpp
switch_pcd_map/launch/: switch_pcd_map.launch.py
switch_pcd_map/map_data/: map_path.yaml  tags_pose.yaml
switch_pcd_map/src/: switch_pcd_map.cpp  switch_pcd_map_node.cpp
test_run/sample_data/: task_data.json  waypointgraph_indoor.json
