<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>switch_pcd_map</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="brucelin90620@gmail.com">bruce</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <build_export_depend>libpcl-all-dev</build_export_depend>

  <depend>eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>switch_map_interfaces</depend>

  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-features</exec_depend>
  <exec_depend>libpcl-filters</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <exec_depend>libpcl-segmentation</exec_depend>
  <exec_depend>libpcl-surface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>